[update] * 修改 当开启新模板时，选择链接中才会出现 微页面 选项
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16161 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/js/view/weixin_menu_link_view/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_link_view/template.html
@@ -1,6 +1,8 @@
 <script id="weixin-menu-link-tmpl-src" type="text/x-jquery-tmpl">
 <ul class="dropdown-menu xa-linkItemActionMenu">
+    {{if isUseWepage}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="webappPage">微页面</a></li>
+    {{/if}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="product">商品及分组</a></li>
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="webappHome">店铺主页</a></li>
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="member">会员主页</a></li>
