--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -1,6 +1,8 @@
 <script id="weixin-webapp-link-dropdown-menu-tmpl-src" type="text/x-jquery-tmpl">
 <ul class="dropdown-menu xa-linkActionMenu">
+    {{if isUseWepage}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="webappPage">微页面</a></li>
+    {{/if}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="product">商品及分组</a></li>
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="webappHome">店铺主页</a></li>
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="member">会员主页</a></li>
