--- a/weapp/termite2/templates/termite2/workbench.html
+++ b/weapp/termite2/templates/termite2/workbench.html
@@ -71,6 +71,7 @@
     W.projectType = "{{ project.type }}";
     var isNewProject = {% if is_new_project %}true{% else %}false{% endif %};
     W.isSystemManager = {% if user|is_system_manager %}true{% else %}false{% endif %};
+    W.isUseWepage = {% if user.get_profile.is_use_wepage %}true{% else %}false{% endif %};
     var bottomDistance = 110;
 
     var loadPages = function(pageManagerView) {
