--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -55,7 +55,8 @@ body {
 }
 .xui-section .xui-i-header {
 	position: relative;
-	padding: 10px;
+	padding-bottom: 5px;
+	top: -5px;
 	font-size: 16px;
 	font-weight: bold;
 	color: #333;
