[update] * 修改 隐藏微页面启用按钮
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16167 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/termite2/templates/termite2/pages.html
+++ b/weapp/termite2/templates/termite2/pages.html
@@ -39,7 +39,7 @@
 		<div class="xui-head">
 			<a href="javascript:void(0);" class="xa-addProject btn btn-success mt10 w150 lh20"><span class="xui-add-btn-icon">+</span>新建微页面</a>
             {% if not request.user_profile.is_use_wepage %}
-            <a href="javascript:void(0);" class="xa-enableWepage btn btn-danger mt10 w150 lh20">启用微页面</a>
+            <a href="javascript:void(0);" class="xa-enableWepage btn btn-danger mt10 w150 lh20 xui-hide">启用微页面</a>
             {% endif %}
 		</div>
 
