--- a/weapp/templates/base.html
+++ b/weapp/templates/base.html
@@ -114,5 +114,14 @@
 
 		{{ 'select_link_target'|load_termite_dialog|safe }}
 		{% block base_js %}{% endblock %}
+	<script>
+	var _hmt = _hmt || [];
+	(function() {
+	var hm = document.createElement("script");
+	hm.src = "//hm.baidu.com/hm.js?ee18872310bbb14797f87c9eda185a85";
+	var s = document.getElementsByTagName("script")[0]; 
+	s.parentNode.insertBefore(hm, s);
+	})();
+	</script>
 	</body>
 </html>
