--- a/weapp/templates/base_v2.html
+++ b/weapp/templates/base_v2.html
@@ -136,5 +136,14 @@
 				<span class="xa-num-unread-message-count xui-noticyNum"></span>
 			</a>
 		</div>
+	<script>
+	var _hmt = _hmt || [];
+	(function() {
+	var hm = document.createElement("script");
+	hm.src = "//hm.baidu.com/hm.js?ee18872310bbb14797f87c9eda185a85";
+	var s = document.getElementsByTagName("script")[0]; 
+	s.parentNode.insertBefore(hm, s);
+	})();
+	</script>
 	</body>
 </html>
