[update] * 修改 样式
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16184 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1138,6 +1138,9 @@ button.xui-removeImageButton{
 	background: #222F3B;
 	float: left;
 }
+.xui-propertyView-specialTemplateGroup .xa-dialogTrigger {
+	cursor: pointer;
+}
 .xui-propertyView-specialTemplateGroup .propertyGroup_property_dynamicControlField_control .propertyGroup_property_input .xui-dialogSelectedBtn{
 	display: inline-block;
 	padding-top: 47px;
