--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -1022,6 +1022,9 @@ ul.wui-relatelink li h3{
 /*=======================商品列表================================*/
 
 /*=================================*/
+.wui-productlist ul{
+    padding-top: 10px;
+}
 .wui-productlist .wui-noProduct{
     margin: 10px;
     padding: 4px;
