--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -268,7 +268,7 @@
                     //在预览模式下，修改a，禁止点击
                     $('a').each(function() {
                         var $link = $(this);
-                        $link.attr('href', 'javascript:void(0);');
+                        //$link.attr('href', 'javascript:void(0);');
                     })
                 }
             });
