[merged] --- Recording mergeinfo for merge of r14783 through r14812 into 'weapp':
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16217 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/marketing.css
+++ b/weapp/static_v2/css/marketing.css
@@ -347,6 +347,9 @@
 	font-size: 12px;
 	font-weight: bold;
 }
+.xui-sideBar-product_summary {
+	background-position: 50px -450px;
+}
 .xui-wepage-membersPage .xui-summary tr:last-child {
 	border-top:1px solid #f2f2f2;
 }
