--- a/weapp/stats/templates/sales/order_summary.html
+++ b/weapp/stats/templates/sales/order_summary.html
@@ -3,7 +3,7 @@
 {% load account_filter %}
 
 {% block content-panel %}
-<div class="xui-wepage-pagesPage">
+<div class="xui-wepage-orderSummaryPage">
     <div class="relative">
         <ul class="breadcrumb">
             <li>您当前所在位置</li>
@@ -23,7 +23,7 @@
                 <td><div class="xui-i-wrap"><span class="xui-i-money" id="product_num"></span><br/><img class="xui-i-img xui-i-hide"  src="/static_v2/img/editor/help.png"/><span class="xui-i-name">成交商品</span><img class="xui-i-img" id="product_num_help" src="/static_v2/img/editor/help.png"/></div></td>
                 <td><div class="xui-i-wrap"><span class="xui-i-money" id="discount_amount"></span><br/><img class="xui-i-img xui-i-hide"  src="/static_v2/img/editor/help.png"/><span class="xui-i-name">优惠抵扣</span><img class="xui-i-img" id="discount_amount_help" src="/static_v2/img/editor/help.png"/></div></td>
             </tr>
-            
+
             <tr>
                 <td ><div class="xui-i-wrap"><span class="xui-i-money" id="postage_amount"></span><br/><img class="xui-i-img xui-i-hide"  src="/static_v2/img/editor/help.png"/><span class="xui-i-name">总运费</span><img class="xui-i-img" id="postage_amount_help" src="/static_v2/img/editor/help.png"/></div></td>
                 <td ><div class="xui-i-wrap"><span class="xui-i-money" id="online_paid_amount"></span><br/><img class="xui-i-img xui-i-hide"  src="/static_v2/img/editor/help.png"/><span class="xui-i-name">在线支付金额</span><img class="xui-i-img" id="online_paid_amount_help" src="/static_v2/img/editor/help.png"/></div></td>
