--- a/weapp/static_v2/css/marketing.css
+++ b/weapp/static_v2/css/marketing.css
@@ -1,4 +1,4 @@
-.xui-wepage-pagesPage .xui-chart{
+.xui-wepage-orderSummaryPage .xui-chart{
 	height: 490px;
 	border: 1px solid #ddd;
 }
@@ -7,17 +7,17 @@
 
 
 /*订单概况分析*/
-.xui-wepage-pagesPage .xui-filter{
+.xui-wepage-orderSummaryPage .xui-filter{
 	height: 66px;
 	width: 100%;
 	background-color: #eaeef6;
 }
 
-.xui-wepage-pagesPage .xui-i-shortcut {
+.xui-wepage-orderSummaryPage .xui-i-shortcut {
     display: inline-block;
 }
 
-.xui-wepage-pagesPage .xui-i-shortcutLink {
+.xui-wepage-orderSummaryPage .xui-i-shortcutLink {
     display: block;
     height: 30px;
     line-height: 30px;
@@ -25,37 +25,37 @@
     padding: 0px 10px;
 }
 
-.xui-wepage-pagesPage .xui-i-activeLink {
+.xui-wepage-orderSummaryPage .xui-i-activeLink {
     background-color: #FFF;
     border: solid 1px #1D84C7;
 }
 
-.xui-wepage-pagesPage .xb-rightPanel {
+.xui-wepage-orderSummaryPage .xb-rightPanel {
 	background-color: #fff;
 	margin-bottom: 15px;
 }
-.xui-wepage-pagesPage .xui-summary {
+.xui-wepage-orderSummaryPage .xui-summary {
 	height: 206px;
 	width: 100%;
 	margin-top: 15px;
 }
-.xui-wepage-pagesPage .xui-summary  {
+.xui-wepage-orderSummaryPage .xui-summary  {
 	border:1px solid  #d7e0e7;
 	background-color: #f8fbff;
 }
-.xui-wepage-pagesPage .xui-summary .xui-i-left {
+.xui-wepage-orderSummaryPage .xui-summary .xui-i-left {
 	background-color: #639fdf;
 	height: 206px;
 	width: 100px;
 }
-.xui-wepage-pagesPage .xui-summary tr td:last-child .xui-i-wrap {
+.xui-wepage-orderSummaryPage .xui-summary tr td:last-child .xui-i-wrap {
 	border-right:none;
 }
-.xui-wepage-pagesPage .xui-summary tr:first-child {
+.xui-wepage-orderSummaryPage .xui-summary tr:first-child {
 	border-bottom: 1px dashed #f2f2f2;
 
 }
-.xui-wepage-pagesPage .xui-summary .xui-i-wrap {
+.xui-wepage-orderSummaryPage .xui-summary .xui-i-wrap {
 	height: 70%;
 	width: 100%;
 	text-align: center;
@@ -66,54 +66,54 @@
 	padding-top: 8px;
 	line-height: 25px;
 }       
-.xui-wepage-pagesPage .xui-summary .xui-i-wrap .xui-i-money {
+.xui-wepage-orderSummaryPage .xui-summary .xui-i-wrap .xui-i-money {
 	color: #e55050;
 	cursor: auto;
 	font-size: 18px;
 }
-.xui-wepage-pagesPage .xui-i-alert {
+.xui-wepage-orderSummaryPage .xui-i-alert {
 	width:145px; color:#666666; font-size:12px;
 }
-.xui-wepage-pagesPage .xui-summary .xui-i-wrap .xui-i-name {
+.xui-wepage-orderSummaryPage .xui-summary .xui-i-wrap .xui-i-name {
 	color: #666666;
 	margin-right: 8px;
 	margin-left: 8px;
 	cursor: auto;
 }
-.xui-wepage-pagesPage .xui-summary .xui-i-hide {
+.xui-wepage-orderSummaryPage .xui-summary .xui-i-hide {
 	visibility: hidden;
 }
-.xui-wepage-pagesPage .xui-summary .xui-i-left .xui-i-title {
+.xui-wepage-orderSummaryPage .xui-summary .xui-i-left .xui-i-title {
 	color: #fff;
 	width: 40px;
 	margin: auto;
 	font-size: 16px;
 	font-weight: bold;
 }
-.xui-wepage-pagesPage .xui-summary .xui-i-wrap .xui-i-img {
+.xui-wepage-orderSummaryPage .xui-summary .xui-i-wrap .xui-i-img {
 	background-image: url(/static_v2/img/editor/help.png);
 	width:18px;
 	height: 18px;
 }
-.xui-wepage-pagesPage .xui-charWrap:nth-child(odd){
+.xui-wepage-orderSummaryPage .xui-charWrap:nth-child(odd){
 	float: left;
 }
-.xui-wepage-pagesPage .xui-charWrap {
+.xui-wepage-orderSummaryPage .xui-charWrap {
 	width: 480px;
 	height: 400px;
 	border: 1px solid #eee;
 	margin-top: 20px;
 }
-.xui-wepage-pagesPage .xui-charWrap:nth-child(even) {
+.xui-wepage-orderSummaryPage .xui-charWrap:nth-child(even) {
 	float: right;
 }
-.xui-wepage-pagesPage .xui-charWrap .xui-i-title{
+.xui-wepage-orderSummaryPage .xui-charWrap .xui-i-title{
 	background-color: #edf3f8;
 	width: 100%;
 	height: 50px;
 	
 }
-.xui-wepage-pagesPage .xui-charWrap .xui-i-title{
+.xui-wepage-orderSummaryPage .xui-charWrap .xui-i-title{
 	background-color: #edf3f8;
 	width: 100%;
 	height: 42px;
@@ -125,20 +125,20 @@
 	font-weight: bold;
 }
 
-.xui-wepage-pagesPage .xui-filter {
+.xui-wepage-orderSummaryPage .xui-filter {
 	padding-top: 22px;
 }
-.xui-wepage-pagesPage .xui-filter .xui-col:last-child {
+.xui-wepage-orderSummaryPage .xui-filter .xui-col:last-child {
 	margin-top: -5px;
 }
-.xui-wepage-pagesPage .xui-charWrap .xui-i-block {
+.xui-wepage-orderSummaryPage .xui-charWrap .xui-i-block {
 	height: 20px;
 	width: 5px;
 	background-color: #20a3ff;
 	float: left;
 	margin-top: 11px;
 }
-.xui-wepage-pagesPage .xui-charWrap:last-child {
+.xui-wepage-orderSummaryPage .xui-charWrap:last-child {
 	width: 100%;
 	clear: both;
 }
