[update]商品概况样式
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16228 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/marketing.css
+++ b/weapp/static_v2/css/marketing.css
@@ -493,7 +493,7 @@
 	font-weight: bold;
 }
 .xui-wepage-sellpagesPage  .xui-gradeTab {
-	min-height: 394px;
+	/*min-height: 394px;*/
 }
 .xui-wepage-sellpagesPage .xui-filter{
 	height: 66px;
