--- a/weapp/stats/templates/sales/product_summary.html
+++ b/weapp/stats/templates/sales/product_summary.html
@@ -136,7 +136,7 @@
                 </tr>
                 {{/each}}
             {{else}}
-                <tr><td colspan="3"><p ><img class="xui-i-img xui-i-hide" src="/static_v2/img/editor/warning.png"/><span style="color:#999999;font-size:16px;font-weight:bold;padding-left:10px;">没有相应的数据</span></p></td></tr>
+                <tr><td colspan="3"><p style="margin-top:150px;margin-bottom:150px"><img class="xui-i-img xui-i-hide" src="/static_v2/img/editor/warning.png"/><span style="color:#999999;font-size:16px;font-weight:bold;padding-left:10px;">还没有相关数据</span></p></td></tr>
             {{/if}}
         </tbody>
     </table>
