--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -997,6 +997,9 @@ button.xui-removeImageButton{
 	width: 100px;
 	height: 100px;
 }
+.xui-propertyView-shopHeader .xui-dynamicComponentControlImgBox{
+	width: 200px;
+}
 .xui-dynamicComponentControlImgBox img {
 	width: 100%;
 	height: 100%;
