[update] * 修改 代码
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16237 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -883,9 +883,10 @@ button.xui-removeImageButton{
 .xui-propertyView-imgAdjGroup .xui-selectLink{
 	display: block;
 }
-.xui-propertyView-imgDisplayGroup .xui-selected-title-box,.xui-propertyView-imageNavGroup .xui-selected-title-box,
-.xui-propertyView-imgAdjGroup .xui-selected-title-box{
-	margin-left: -5px;
+.xui-propertyView-imgDisplayGroup .xui-selected-title-box,
+.xui-propertyView-imageNavGroup .xui-selected-title-box,
+.xui-propertyView-imgAdjGroup .xui-selected-title-box {
+	margin-left: 0px;
 }
 .xui-propertyView-imgDisplayGroup .xui-selected-title-box+a,.xui-propertyView-imageNavGroup .xui-selected-title-box+a,
 .xui-propertyView-imgAdjGroup .xui-selected-title-box+a{
@@ -1112,7 +1113,7 @@ button.xui-removeImageButton{
 	display: block;
 }
 .xui-propertyView-personalityThemeGroup .xui-selected-title-box{
-	margin-left: -5px;
+	margin-left: 0px;
 }
 .xui-propertyView-personalityThemeGroup .xui-link{
 	margin-left: 0px;
