[update] * 数据统计 => 数据罗盘
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16251 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -61,7 +61,7 @@
 					{% if 'static'|satisfy_permission:request %}
 					<li>
 						<!--<a href='http://tj.weizzz.com/' target='_blank' title='数据统计'>数据统计</a>-->
-						<a href='/stats/manage_summary/' title='数据统计'>数据统计</a>
+						<a href='/stats/manage_summary/' title='数据罗盘'>数据罗盘</a>
 					</li>
 					{% endif %}
 					{% if 'manage_auth'|satisfy_permission:request %}
