[update] * 修改 二维码
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16253 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/js/view/weixin_news_previewer/template.html
+++ b/weapp/static_v2/js/view/weixin_news_previewer/template.html
@@ -18,8 +18,7 @@
 		<a class="xui-news-previewer-update-btn" href="">重新编辑</a>
 		-->
 		<div class="xui-news-previewer-qcode-box">
-	<!--		<div><img src="/termite2/qrcode_image/?data=${qrcodeUrl}"></div> -->
-			<div><img src="${headImg}"></div>
+			<div><img src="/termite2/qrcode_image/?data=${qrcodeUrl}"></div>
 			<div class="pb10">微信扫一扫</div>
 		</div>
 	</div>
