--- a/weapp/termite2/templates/termite2/pages.html
+++ b/weapp/termite2/templates/termite2/pages.html
@@ -29,7 +29,7 @@
             <div class="xui-i-actions">
                 <a href="/termite2/page_editor/?project_id={{active_page.id}}">编辑</a>
                 <a class="ml10" href="/termite2/termite_preview/?id={{active_page.id}}" target="_blank">预览</a>
-                <a href="javascript:void(0);" class="xa-copyLink ml10">链接</a>
+                <a href="javascript:void(0);" class="xa-copyLink ml10 xui-hide">链接</a>
                 <a href="javascript:void(0);" class="xa-qrcode ml10">二维码</a>
             </div>
         </div>
@@ -97,7 +97,7 @@
                     {{if !project.isActive}}
                     <a class="xa-delete ml10" href="javascript:void(0);">删除</a>
                     {{/if}}
-                    <a class="xa-copyLink ml10" href="javascript:void(0);">链接</a>
+                    <a class="xa-copyLink ml10 xui-hide" href="javascript:void(0);">链接</a>
                     {{if project.isActive}}
                     <a class="ml10" href="javascript:void(0);" style="color:#999; text-decoration:none;">店铺主页</a>
                     {{else}}
