[update] * 增加"数据罗盘"的顶图。
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16255 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -15,7 +15,11 @@
 		<div class="xui-logo">
 			<div class="xui-i-logoHref xa-i-logoHref"></div>
 			{% if first_navs %}
+				{% ifequal app_name 'stats' %}
+				<img src="/static_v2/img/editor/statsTopLogo.jpg" alt="">
+				{% else %}
 				<img src="/static_v2/img/editor/weixinTopLogo.jpg" alt="">
+				{% endifequal %}
 			{% else %}
 				<img src="/static_v2/img/editor/topLogo.jpg" alt="">
 			{% endif %}
