--- a/weapp/termite/static/termite_js/app/component/wepage/image/image.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/image/image.html
@@ -50,7 +50,7 @@
     class="wui-singleImageWithTitle"
 >
     {% if component.model.image %}
-        <img src="{{component.model.image}}" class="wa-inner-imgbox" />
+        <img src="{{component.model.image}}" class="wa-inner-imgbox" style="display:block;"/>
     {% else %}
         <div class="xa-placeholder wui-i-placeholder">
             <div class="wui-i-placeholderText" style="margin-top: 50px;">
