--- a/weapp/stats/templates/marketing/activity_analysis.html
+++ b/weapp/stats/templates/marketing/activity_analysis.html
@@ -55,7 +55,7 @@
                 <th>参与次数/人数</th>
                 <th>活动起止时间</th>
                 <th>活动状态</th>
-                <th width="280">活动分析</th>
+                <th>活动分析</th>
             </tr>
         </thead>
         <tbody>
@@ -63,10 +63,10 @@
             <tr data-id="${activity.id}">
                 <td class="p10">${activity.name}</td>
                 <td>${activity.manager}</td>
-                <td>${activity.parti_times} / ${activity.parti_person_cnt}</td>
-                <td>${activity.start_at}{{if activity.end_at!='-'}} - ${activity.end_at}{{/if}}</td>
-                <td>${activity.status_text}</td>
-                <td>
+                <td style="width:120px">${activity.parti_times} / ${activity.parti_person_cnt}</td>
+                <td style="width:180px">${activity.start_at}{{if activity.end_at!='-'}} - ${activity.end_at}{{/if}}</td>
+                <td style="width:100px">${activity.status_text}</td>
+                <td style="width:220px">
                     <a class="xa-activity-network xui-i-link" data-id="${activity.id}" data-type="${data.type}">参与传播</a>
                     <a class="xa-show-activity-stats xui-i-link" data-id="${activity.id}" data-type="${data.type}">结果分析</a>
                 </td>
