背景图居中
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16278 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/termite/static/termite_js/app/component/wepage/personalityTheme/personalityTheme.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/personalityTheme/personalityTheme.html
@@ -9,7 +9,7 @@
     data-index="{{component.model.index}}" 
     data-ui-behavior="xub-selectable"
     style="">
-    <div class="wa-shop-backgroud wui-shop-Bg" style="background: {% if component.model.backgroud %}url({{component.model.backgroud}}){% else %}#256FB5{% endif %} no-repeat;background-size:cover;cursor:pointer">
+    <div class="wa-shop-backgroud wui-shop-Bg" style="background: {% if component.model.backgroud %}url({{component.model.backgroud}}){% else %}#256FB5{% endif %} no-repeat;background-size:cover;cursor:pointer;background-position:center;">
     	<ul>
 	    	{% for component in component.components %}
 			<li data-component-cid="{{component.cid}}" class="xa-inner-title xui-inner-title">
