图片导航，橱窗，文本导航
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16301 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -612,7 +612,7 @@ ul.wui-relatelink li h3{
   background-size: 100% 1px;
   background-position: left bottom;
   height: 44px;
-  margin: 0 10px;
+  padding: 0 10px;
   box-sizing:border-box;
 }
 .wui-textnav li a,.wui-relatelink li a{
@@ -1132,6 +1132,12 @@ ul.wui-relatelink li h3{
 .wui-imagenav .wui-inner-pic{
     height: 75px;
     overflow: hidden;
+    border: 1px solid #e5e5e5;
+    border-right: none;
+    box-sizing:border-box;
+}
+.wui-imagenav li:last-child .wui-inner-pic{
+    border-right: 1px solid #e5e5e5;
 }
 /*================================橱窗=========================*/
 .wui-imagedisplay{
@@ -1147,11 +1153,25 @@ ul.wui-relatelink li h3{
     height: 106px;
     overflow: hidden;
 }
+.wui-imagedisplay li .wui-inner-pic{
+    border: 1px solid #e5e5e5;
+    box-sizing:border-box;
+}
+.wui-imagedisplay li:last-child{
+    border-bottom: 1px solid #e5e5e5;
+}
 .wui-imagedisplay .wui-grid-e li:first-child{
     margin-right: 0.1%;
 }
 .wui-imagedisplay .wui-grid-e li:first-child .wui-inner-pic{
     height: 211px;
+    border-right: none;
+}
+.wui-imagedisplay .wui-grid-b li{
+    border-bottom: 1px solid #e5e5e5;
+}
+.wui-imagedisplay .wui-grid-b li .wui-inner-pic{
+    border-right: none;
 }
 .wui-imagedisplay .wui-black{
     height: 318px;
