--- a/weapp/termite/static/termite_js/app/component/wepage/textnav/textnav.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/textnav/textnav.html
@@ -5,7 +5,7 @@
     style="background:#fff;"
 >
 	{% for component in component.components %}
-	<li data-component-cid="{{component.cid}}" style="border-bottom:1px solid #e5e5e5;">
+	<li data-component-cid="{{component.cid}}">
 		<a href="{{component.model.target|extract_target_data:request|safe}}">
 			<span class="wa-inner-link">{{component.model.title}}</span> 
 			<i class="right-arrow"></i>
