修复更多评价页BUG
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16311 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
@@ -26,7 +26,7 @@
 					<div>
 						{% if review.custom_model_properties %}
                             {% for property in review.custom_model_properties %}
-                            <span class="mr10">{{ property.propertyName }}：&nbsp;{{ property.name }}</span>
+                            <span class="mr10">&nbsp;{{ property.property_value }}</span>
                             {% endfor %}
                         {% endif %}
 					</div>
