--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_list.html
@@ -25,7 +25,7 @@
                     <span class="xui-specification em75 c9">
                         {% if review.custom_model_properties %}
                             {% for property in review.custom_model_properties %}
-                                {{ property.name }}&nbsp;&nbsp;
+                                {{ property.property_value }}&nbsp;&nbsp;
                             {% endfor %}
                         {% endif %}
                     </span>
