--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -36,7 +36,7 @@
 .wui-grid-b > .wui-block-c {
     /* width: 33.25%; IE7 */
     /* margin-right: -.5px; BB5 */
-    width: 33.3%;
+    width: 33.3333%;
 }
 .wui-grid-c > .wui-block-a,
 .wui-grid-c > .wui-block-b,
@@ -1148,6 +1148,7 @@ ul.wui-relatelink li h3{
     background: #fff;
     box-sizing:border-box;
     margin-bottom: 10px;
+    margin-top: 1px;
 }
 .wui-imagedisplay .wui-inner-pic{
     height: 106px;
@@ -1157,13 +1158,13 @@ ul.wui-relatelink li h3{
     box-sizing:border-box;
 }
 .wui-imagedisplay .wui-grid-e li:first-child{
-    margin-right: 0.1%;
+    margin-right: 1px;
 }
 .wui-imagedisplay .wui-grid-e li:first-child .wui-inner-pic{
     height: 211px;
 }
 .wui-imagedisplay .wui-grid-b li{
-    margin-right: 0.05%;
+    margin-right: 1px;
 }
 .wui-imagedisplay .wui-grid-b li:last-child{
     margin-right: 0;
