--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -126,7 +126,11 @@
         var $productList = $('.wui-productlist');
         var $imageDisplay = $('.wui-imagedisplay');
         var $imageNav = $('.wui-imagenav');
-        
+        var screenWidth = $(this).width()-2;   //获取屏幕宽度，减去2px外边距
+        var defalutWidth = $(this).width()-1;   
+        var averageWidth = screenWidth/3;             
+        var width = defalutWidth/3;             
+
         if($product.length > 0){
 
             getWidth('.wui-product');
@@ -136,8 +140,11 @@
             getWidth('.wui-productlist');
 
         }else if($imageDisplay.length > 0){
-
+            $imageDisplay.find('.wui-grid-b li').width(averageWidth);
+            $imageDisplay.find('.wui-grid-e li').width(width);
+            $imageDisplay.find('.wui-grid-e li').eq(0).width(width*2);
             getWidth('.wui-imagedisplay');
+            $imageDisplay.find('.wui-grid-e li').eq(2).height(width-1);
 
         }else if($imageNav.length > 0){
             getWidth('.wui-imagenav');
