橱窗编辑页
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16331 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/termite/static/css/design.css
+++ b/weapp/termite/static/css/design.css
@@ -146,7 +146,13 @@
     margin: 0px 2px;
     border: dashed 1px #CFCFCF;
 }
-
+/*店铺装修编辑页样式调整*/
 .wui-personalityTheme .wui-shop-Bg, .wui-specialTemplate .wui-shop-Bg{
     position: relative;
+}
+.wui-imagedisplay .wui-grid-e li:first-child{
+    margin-right: 0;
+}
+.wui-imagedisplay .wui-grid-b li{
+    margin-right: 0;
 }
