文本导航边线
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16353 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -608,12 +608,10 @@ ul.wui-relatelink li h3{
     vertical-align:baseline;
 }
 .wui-textnav li,.wui-relatelink li{
-  background:url(/termite_static/img/bottom_line.png) left top no-repeat;
-  background-size: 100% 1px;
-  background-position: left bottom;
   height: 44px;
   padding: 0 10px;
   box-sizing:border-box;
+  border-bottom: 1px solid #e5e5e5;
 }
 .wui-textnav li a,.wui-relatelink li a{
     display: block;
