[update] * 修改 盛景个人中心
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16355 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/apps/customerized_apps/shengjing/templates/webapp/user_center.html
+++ b/weapp/apps/customerized_apps/shengjing/templates/webapp/user_center.html
@@ -118,7 +118,7 @@
     	            <img src="{% if member.user_icon %}{{ member.user_icon }}{% else %}/static/img/user-1.jpg{% endif %}" onerror="this.src='/static/img/user-1.jpg'"/>
                 </div>
             </dt>
-            <dd>
+            <dd class="tc">
                 <h2 class="mt5 tc" style="font-size:1.4em;">{{ member.username }}</h2>
                 <div class="xui-inner-roleBox mt5">
                     <span class="xui-inner-roleLabel">
