--- a/weapp/templates/new_jqm_content_base.html
+++ b/weapp/templates/new_jqm_content_base.html
@@ -192,6 +192,15 @@
             if(W.sharePageImg.substr(0,7)!="http://" && W.sharePageImg.substr(0,8)!="https://")
                 W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
 
+            var link = window.location.href;
+            if (link.indexOf('fmt') === -1){
+                if (link.indexOf('&') === -1){
+                    link = link +"?fmt="+W.curRequestMemberToken;
+                } else {
+                    link = link +"&fmt="+W.curRequestMemberToken;
+                }
+            }
+
             $(document).ready(function() {
                 var hm = document.createElement("script");
                 hm.src = "/weixin/js/config/?path="+encodeURIComponent(location.href);
@@ -211,7 +220,7 @@
                  */
                 W.wxShareData = {
                     "imgUrl" : W.sharePageImg,
-                    "link" : window.location.href,
+                    "link" : link,
                     "desc" : W.sharePageDesc,
                     "title" : W.sharePageTitle,
                     // 点击分享按钮
