--- a/weapp/termite2/templates/termite2/workbench.html
+++ b/weapp/termite2/templates/termite2/workbench.html
@@ -147,7 +147,7 @@
 
       loadPages(pageManagerView);
 
-      $('.xa-save').click(function() {
+      $('.xa-save').click(function(event) {
         event.stopPropagation();
         event.preventDefault();
         // 保存model
